change storage url to use mesos master host instead of localhost (used by default)

--- a/repo/packages/D/dse/0/config.json
+++ b/repo/packages/D/dse/0/config.json
@@ -72,7 +72,7 @@
           "storage": {
             "type": "string",
             "description": "State storage path. See --storage option",
-            "default": "zk:/dse-mesos"
+            "default": "zk:master.mesos:2181/dse-mesos"
           },
           "jre": {
             "type": "string",
